--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "payload-socket-plugin",
-  "version": "1.1.5",
-  "description": "Real-time Socket.IO plugin for Payload CMS with Redis support",
+  "version": "2.0.0",
+  "description": "Real-time Socket.IO plugin for Payload CMS v3 with Redis support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "browser": "dist/browser.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./browser": {
+      "import": "./dist/browser.js",
+      "require": "./dist/browser.js",
+      "types": "./dist/browser.d.ts"
+    }
+  },
   "files": [
     "dist",
     "README.md"
@@ -29,6 +40,9 @@
   "license": "MIT",
   "engines": {
     "node": ">=20.0.0"
+  },
+  "peerDependencies": {
+    "payload": "^3.72.0"
   },
   "dependencies": {
     "@socket.io/redis-adapter": "^8.0.0",
